changed colour scheme

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		canvas {
 			margin:auto;
 		}
-		.save {
+		/* .save {
 			position:absolute;
-		}
+		} */
 	</style>
 </head>
 <body>
-	<button class="save" onClick="saveSVG()">SAVE</button>
+	<!-- <button class="save" onClick="saveSVG()">SAVE</button> -->
 </body>
 </html>
